# design-pattern-de-quai

./: CMakeLists.txt  README.md  main.cpp
s2_solid_design_principles/: dependency_inversion_principle.cpp  interface_segregation_principle.cpp  journal.cpp  liskov_substitution_principle.cpp  open_closed_principle.cpp
